Изменил схему, чтобы она подходила под задание. Поработал над тестированием
