# internal/models/requests.go
@@ -1,7 +1,7 @@
 package models
 
 type AuthRequest struct {
-	Name     string `json:"name" example:"username" binding:"required"`
+	Username string `json:"username" example:"username" binding:"required"`
 	Password string `json:"password" example:"secret123" binding:"required"`
 }
 
